--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,3 +45,47 @@ jobs:
           name: pytest-report
           path: pytest-report.xml
           if-no-files-found: ignore
+
+  notebook-smoke:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-3.11-${{ hashFiles('**/requirements.txt') }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install jupyter nbconvert papermill
+
+      - name: Generate processed sample (fast)
+        env:
+          SAMPLE_SIZE: 100
+        run: |
+          python scripts/generate_processed.py
+
+      - name: Execute notebooks (smoke)
+        run: |
+          mkdir -p executed_notebooks
+          jupyter nbconvert --to notebook --execute notebooks/02_feature_engineering.ipynb --ExecutePreprocessor.timeout=600 --output executed_notebooks/02_feature_engineering.ipynb
+          jupyter nbconvert --to notebook --execute notebooks/03_model_baseline.ipynb --ExecutePreprocessor.timeout=600 --output executed_notebooks/03_model_baseline.ipynb
+
+      - name: Upload executed notebooks
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: executed-notebooks
+          path: executed_notebooks
+          if-no-files-found: ignore
